--- a/style.css
+++ b/style.css
@@ -70,3 +70,20 @@ p {
      margin-left: 20px;
      padding-left: 20px;
 }
+
+#display 
+{
+    background: rgba(255,255,255,.9);
+    margin-top: 20px;
+    margin-left: 20px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    float: left;
+    width: 35%;
+}
+#heading
+{
+    padding-top: 10px;
+    padding-left: 15px;
+}
